Improved code quality in RaftControllerTest ; Fixed compilation error in DiscoveryServiceTest